kyverno/policies/require-image-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-image-tag
  annotations:
    policies.kyverno.io/title: Require Image Tag
    policies.kyverno.io/description: >-
      Images must specify a tag and must not use 'latest'.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kyverno
                - argocd
      validate:
        message: "An image tag is required and must not be 'latest'."
        foreach:
          - list: >-
              request.object.spec.containers +
              request.object.spec.initContainers +
              request.object.spec.ephemeralContainers
            deny:
              conditions:
                any:
                  - key: "{{ element.image }}"
                    operator: Equals
                    value: "*:latest"
                  - key: "{{ element.image }}"
                    operator: NotContains
                    value: ":"
