kyverno/tests/resources/fail-no-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-no-limits
  namespace: nginx-dev
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 101
    runAsGroup: 101
  containers:
    - name: nginx
      image: nginx/nginx-unprivileged:1.27.4
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 15
      readinessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
