kyverno/tests/resources/fail-no-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-no-probes
  namespace: nginx-dev
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 101
    runAsGroup: 101
  containers:
    - name: nginx
      image: nginx/nginx-unprivileged:1.27.4
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "250m"
          memory: "256Mi"
