kyverno/tests/resources/fail-root-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fail-root-container
  namespace: nginx-dev
spec:
  securityContext:
    runAsNonRoot: false
    runAsUser: 0
  containers:
    - name: nginx
      image: nginx/nginx-unprivileged:1.27.4
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "250m"
          memory: "256Mi"
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 10
        periodSeconds: 15
      readinessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
